# quoter

./: .editorconfig  .gitignore  .mypy.ini  .pylintrc  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
src/: app.py
src/config/: app_config.py  author_link_config.py  quote_config.py
src/const/: app_config.py  app_paths.py  exit_status.py  tts_config.py
src/error/: title_not_found.py  tuple_item_error.py
src/painter/: painter.py
src/painter/configs/: font_config.py  image_config.py  text_config.py
src/scraper/: author_link_scraper.py  quote_scraper.py  random_quote_scraper.py  wikiquote_scraper.py
src/silero/config/: model_config.py
src/silero/tts/: silero_tts.py
src/silero_tts/: silero_tts.py
src/silero_tts/config/: audio_config.py  device_config.py  speaker_config.py
src/wikiquote/: wikiquote.py
src/wikiquote/collection/: tuple.py
src/wikiquote/collections/: list.py  quote_list.py
src/wikiquote/config/: author_link_config.py  pages_config.py  wikiquote_config.py
src/wikiquote/const/: exception_message.py  list_error.py  tuple_error.py
src/wikiquote/printer/: author_printer.py  quote_printer.py  wikiquote_printer.py
src/wikiquote/scraper/: author_link_scraper.py  author_scraper.py  quote_scraper.py  wikiquote_scraper.py
